--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ body.cursor-hidden * {
     padding: 5px 10px;
     border-radius: 10px;
     font-size: 0.75rem;
-    text-transform: none;
+    text-transform: uppercase;
     font-weight: 700;
     cursor: pointer;
 }
